# vector

./: .gitignore  README.md  configure  meson.build  vecctor.c
.github/workflows/: main.yml
examples/: 1.c  2.c  meson.build
include/: defer.h  result.h  vecctor.h
src/: vecctor.c
tests/: meson.build  test.c
